tests/paczka1/small_fuzzy/97981658.err
Error in line 1: TVlC S523 95,7
Error in line 9: S951 S523 40,1
